# serializer version: 1
# name: test_template_error
  dict({
    'conversation_id': <ANY>,
    'response': dict({
      'card': dict({
      }),
      'data': dict({
        'code': 'unknown',
      }),
      'language': 'en',
      'response_type': 'error',
      'speech': dict({
        'plain': dict({
          'extra_data': None,
          'speech': 'Sorry, I had a problem with my template',
        }),
      }),
    }),
  })
# ---
# name: test_unknown_llm_api
  dict({
    'conversation_id': <ANY>,
    'response': dict({
      'card': dict({
      }),
      'data': dict({
        'code': 'unknown',
      }),
      'language': 'en',
      'response_type': 'error',
      'speech': dict({
        'plain': dict({
          'extra_data': None,
          'speech': 'Error preparing LLM API',
        }),
      }),
    }),
  })
# ---
